plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.core'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Database
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// S3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// docs
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

processResources.dependsOn('copySecret')

tasks.register('copySecret', Copy) {
	description = 'Copy submodules to project'

	from 'src/main/resources/mini-secret'
	include '*.yml'
	into 'src/main/resources'
}

tasks.named('test') {
	useJUnitPlatform()
}
